[CRNT-39638]: Benchmark Management: Formatting / Input Control Issues
- Modified tab-arrow by adding box-sizing:content-box to the tab-container class. THis fixes issues with the tab arrow being located too far above or below the tab container across different browsers. Firefox is still showing 1pixel off when compared to Chrome and IE but at this point I consider that acceptable.

Bug: CRNT-39638

--- a/benchmark/src/main/resources/META-INF/webapp/html5/styles/benchmark.css
+++ b/benchmark/src/main/resources/META-INF/webapp/html5/styles/benchmark.css
@@ -15,6 +15,7 @@ span.dirty:before{
 	border-bottom:solid 1px silver;
 	position:relative;
 	height:30px;
+	box-sizing: content-box;
 }
 
 .tab {
@@ -41,9 +42,10 @@ span.dirty:before{
 .tab-arrow {
 	position: absolute;
 	left: calc(50% - 5px);
-	bottom:-10px;
+	x.bottom:-10px;
 	background: #fff;
 	border: 1px solid transparent;
+	top:20px;
 }
 
 .tab-arrow:after, .tab-arrow:before {
